--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ plugins {
     id 'kotlin-kapt'
 }
 
+repositories {
+    mavenCentral()
+}
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.0"
@@ -47,6 +51,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:1.2.0"
     implementation "androidx.multidex:multidex:2.0.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation 'io.sentry:sentry-android:4.3.0'
 
     // Network
     implementation 'com.google.code.gson:gson:2.8.6'
